# repo-patcher

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMPREHENSIVE_PHASE2_TEST_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  LICENSE  PHASE_1C_COMPLETE_SUMMARY.md  PHASE_1C_SUMMARY.md  PHASE_1D_COMPLETE_SUMMARY.md  PHASE_1D_VERIFICATION_REPORT.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_FIXES_SUMMARY.md  PHASE_2_TESTING_COMPLETE_REPORT.md  PHASE_2_VERIFICATION_REPORT.md  README.md  ROBUSTNESS_SUMMARY.md  TODO.md  docker-compose.yml  evaluation_design.md  pyproject.toml  test_ai_integration.py  test_integration_architecture.py  test_phase1c_handlers.py  test_phase1c_simple.py  test_robustness_enhancements.py  verify_phase1d.py  verify_phase2.py
.github/workflows/: ci.yml  fix-tests.yml  maintenance.yml
monitoring/: alerts.yml  prometheus.yml
scenarios/E001_missing_import/: scenario.json
scenarios/E002_js_missing_import/: scenario.json
scenarios/E002_js_missing_import/repo/: package.json
scenarios/E003_go_missing_import/: scenario.json
scenarios/E003_go_missing_import/expected_fix/: utils.go  utils_test.go
scenarios/E003_go_missing_import/repo/: utils.go
scripts/: demo_state_machine.py  run_evaluation.py
src/repo_patcher/: __init__.py  cli.py
src/repo_patcher/agent/: __init__.py  config.py  config_schema.py  context.py  exceptions.py  health.py  logging_config.py  models.py  openai_client.py  performance.py  rate_limiter.py  runner.py  safety.py  shutdown.py  state_machine.py  structured_logging.py  validation.py
src/repo_patcher/evaluation/: __init__.py  models.py  runner.py
src/repo_patcher/monitoring/: __init__.py  health.py  metrics_server.py  telemetry.py
src/repo_patcher/tools/: __init__.py  base.py  code_search.py  go_handler.py  javascript_handler.py  language_support.py  patch_apply.py  python_handler.py  test_runner.py
tests/: test_agent.py  test_agent_enhanced.py  test_evaluation.py  test_phase2_multi_language.py  test_phase2_performance.py  test_phase2_safety.py
(+6 files in other folders)
